# gst-smartphotobin

./: .gitignore  README.md  meson.build  meson_options.txt
include/: meson.build
include/private/: qadr_utils.h  smartphotobin_utils.h
src/: meson.build  plugin.vala  qadr_utils.cpp  qadrbin.vala  smartphotobin.vala  smartphotobin_utils.cpp  utils.vala
src/ui/: gui.vala  meson.build
src/ui/resources/: filelist.gresource.xml
src/ui/resources/components/: test_gui_capture_controls.ui  test_gui_controls.ui  test_gui_gallery.ui  test_gui_gallery_item.ui  test_gui_slider_box.ui  test_gui_status_bar.ui
src/ui/resources/layouts/: test_gui.ui
subprojects/: .gitignore  gst_eyescan.wrap
test/: meson.build
test/exitcode/: meson.build
test/vala/: meson.build  test_gui.vala  test_qadr.vala
